fix overflow

--- a/assets/scss/05_components/_grid.scss
+++ b/assets/scss/05_components/_grid.scss
@@ -9,6 +9,7 @@
     margin: 0;
     background: white;
     position: relative;
+    overflow-x: hidden;
     z-index: 2;
     &.initial {
         display: none;
